<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LogInActivity">

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="299dp"-->
<!--        android:layout_height="339dp"-->
<!--        android:layout_marginTop="21dp"-->
<!--        android:contentDescription="@string/todo1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/continueas"-->
<!--        tools:ignore="MissingConstraints" />-->

    <LinearLayout
        android:id="@+id/mainLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/logactivity">

        </com.airbnb.lottie.LottieAnimationView>


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/continue_as"
        android:textColor="#FF2a4e"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnVet"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/veterinarian"
        android:textSize="26sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnPetOwner"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/pet_owner"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVet" />


</LinearLayout>